unpackaged/main/default/objects/Ubicacion__c/Ubicacion__c.object-meta.xml
<CustomObject>
    <label>Ubicación Compañia</label>
    <nameField>
        <displayFormat>U-{00}</displayFormat>
        <label>Ubicación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ubicaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>