unpackaged/main/default/objects/Ubicacion__c/fields/Banco_Intermediario__c.field-meta.xml
<CustomField>
    <fullName>Banco_Intermediario__c</fullName>
    <label>Banco Intermediario (Cuenta Extranjera)</label>
    <length>22</length>
    <type>Text</type>
</CustomField>