unpackaged/main/default/objects/Ubicacion__c/fields/CLABE_HSBC__c.field-meta.xml
<CustomField>
    <fullName>CLABE_HSBC__c</fullName>
    <label>CLABE HSBC</label>
    <length>22</length>
    <type>Text</type>
</CustomField>