unpackaged/main/default/objects/Ubicacion__c/fields/CLABE_Santander__c.field-meta.xml
<CustomField>
    <fullName>CLABE_Santander__c</fullName>
    <label>CLABE Santander</label>
    <length>22</length>
    <type>Text</type>
</CustomField>