unpackaged/main/default/objects/Ubicacion__c/fields/Clave_RAP_HSBC__c.field-meta.xml
<CustomField>
    <fullName>Clave_RAP_HSBC__c</fullName>
    <label>Clave RAP HSBC</label>
    <length>22</length>
    <type>Text</type>
</CustomField>