unpackaged/main/default/objects/Ubicacion__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañia</label>
    <referenceTo>Compania__c</referenceTo>
    <relationshipName>Ubicaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>