unpackaged/main/default/objects/Ubicacion__c/fields/Convenio_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Convenio_Empresa__c</fullName>
    <label>Convenio / Empresa Santander</label>
    <length>22</length>
    <type>Text</type>
</CustomField>