unpackaged/main/default/objects/Ubicacion__c/fields/Cuenta_Extranjera__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Extranjera__c</fullName>
    <label>Cuenta Extranjera</label>
    <length>22</length>
    <type>Text</type>
</CustomField>