unpackaged/main/default/objects/Ubicacion__c/fields/Direccion_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Fiscal__c</fullName>
    <label>Dirección Fiscal</label>
    <type>TextArea</type>
</CustomField>