unpackaged/main/default/objects/Ubicacion__c/fields/Direccion_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Fisica__c</fullName>
    <label>Dirección Física</label>
    <type>TextArea</type>
</CustomField>