unpackaged/main/default/objects/Ubicacion__c/fields/Email_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Email_Cobranza__c</fullName>
    <label>Email Cobranza</label>
    <type>Email</type>
</CustomField>