unpackaged/main/default/objects/Ubicacion__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <label>Municipio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>