unpackaged/main/default/objects/Ubicacion__c/fields/Nombre_de_la_Compania__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Compania__c</fullName>
    <formula>Compania__r.Name</formula>
    <label>Nombre de la Compañia</label>
    <type>Text</type>
</CustomField>