unpackaged/main/default/objects/Ubicacion__c/fields/Referencia_Banorte__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Banorte__c</fullName>
    <label>Referencia Banorte</label>
    <length>22</length>
    <type>Text</type>
</CustomField>