unpackaged/main/default/objects/Ubicacion__c/fields/Referencia_FEMSA__c.field-meta.xml
<CustomField>
    <fullName>Referencia_FEMSA__c</fullName>
    <label>Referencia FEMSA</label>
    <length>22</length>
    <type>Text</type>
</CustomField>