unpackaged/main/default/objects/Ubicacion__c/fields/Referencia_HSBC__c.field-meta.xml
<CustomField>
    <fullName>Referencia_HSBC__c</fullName>
    <label>Referencia HSBC</label>
    <length>22</length>
    <type>Text</type>
</CustomField>