unpackaged/main/default/objects/Ubicacion__c/fields/Referencia_Santander__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Santander__c</fullName>
    <label>Referencia Santander</label>
    <length>22</length>
    <type>Text</type>
</CustomField>