unpackaged/main/default/objects/Ubicacion__c/fields/Representante_Legal_Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal_Apellido_Materno__c</fullName>
    <label>Representante Legal Apellido Materno</label>
    <length>100</length>
    <type>Text</type>
</CustomField>