unpackaged/main/default/objects/Ubicacion__c/fields/Representante_Legal_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal_Nombre__c</fullName>
    <label>Representante Legal Nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>