unpackaged/main/default/objects/Ubicacion__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>