unpackaged/main/default/objects/Ubicacion__c/fields/SPEI_HSBC__c.field-meta.xml
<CustomField>
    <fullName>SPEI_HSBC__c</fullName>
    <label>SPEI HSBC</label>
    <length>22</length>
    <type>Text</type>
</CustomField>