unpackaged/main/default/objects/Ubicacion__c/fields/SPEI_Santander__c.field-meta.xml
<CustomField>
    <fullName>SPEI_Santander__c</fullName>
    <label>SPEI Santander</label>
    <length>22</length>
    <type>Text</type>
</CustomField>