unpackaged/main/default/objects/Ubicacion__c/fields/Telefono_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Cobranza__c</fullName>
    <label>Teléfono Cobranza</label>
    <type>Phone</type>
</CustomField>