unpackaged/main/default/objects/Ubicacion__c/fields/Todo__c.field-meta.xml
<CustomField>
    <fullName>Todo__c</fullName>
    <externalId>true</externalId>
    <label>Todo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>