unpackaged/main/default/objects/Ubicacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compania__c</columns>
    <columns>Estado__c</columns>
    <columns>Municipio__c</columns>
    <columns>Nombre_de_la_Compania__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>